# galay-utils

./: .gitignore  ALGORITHM_README.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md  WORKSPACE
.cache/clangd/index/: App.hpp.C2BCDB811C986DE4.idx  BackTrace.hpp.7BA175F4513AB261.idx  Base64.hpp.876A3613E2F9BB83.idx  CircuitBreaker.hpp.C3C976B7046CB357.idx  ConsistentHash.hpp.BB12E9B99E5789F9.idx  Defn.hpp.8B07BFAD05B7C252.idx  HMAC.hpp.3C4816EC973BDCE0.idx  Huffman.hpp.3C444D92D1C2B89C.idx  LoadBalancer.hpp.A44B841403144B7D.idx  LoadBalancer.inl.88738C9D1AECA285.idx  MD5.hpp.CE7041A2BD97935D.idx  MurmurHash3.hpp.41610C4424E0D2B1.idx  Mvcc.hpp.2EB412E08A92DDCA.idx  Parser.hpp.C11FEAFE78D44F73.idx  Pool.hpp.AC4341846DEE3118.idx  Process.hpp.5E437DCDA183A1A2.idx  Random.hpp.CC31615DF1BD64D3.idx  RateLimiter.hpp.5B2CEFD5347EE2A2.idx  Salt.hpp.237861456DECAA41.idx  SignalHandler.hpp.88E16DCD857D26BC.idx  String.hpp.CA9B403EF43E0212.idx  System.hpp.4C54BEDE743EBA3D.idx  Thread.hpp.3B03A4FDEFF45863.idx  TrieTree.hpp.C38B10FCA113691E.idx  TypeName.hpp.FB006B5BC9EA4788.idx  galay-utils.hpp.5E80E1A8A8B0E36A.idx  test_all.cpp.CC20B6349E1D8E19.idx
.claude/galay系列库使用规范/: SKILL.md
.claude/skills/galay系列库使用规范/: SKILL.md
benchmark/: CMakeLists.txt  bloom_filter_benchmark.cpp  byte_queue_view_benchmark.cpp  circuit_breaker_benchmark.cpp  lru_cache_benchmark.cpp  ring_buffer_benchmark.cpp
build-docverify/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-docverify/examples/: E1-BasicUsage  Makefile  cmake_install.cmake
build-mod/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-mod/test/: CTestTestfile.cmake  cmake_install.cmake  test_all
cmake/: galay-utils-config.cmake.in  option.cmake
docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  README.md  circuitbreaker.md  ratelimiter.md  release_note.md
docs/plans/: 2026-06-06-directory-convergence-design.md  2026-06-06-directory-convergence.md  2026-06-06-lru-cache-design.md  2026-06-06-lru-cache.md  2026-06-06-module-production-roadmap.md  2026-06-06-threadpool-concurrentqueue.md  2026-06-06-utils-production-roadmap.md  2026-06-07-bytes-migration-design.md  2026-06-07-bytes-migration.md
examples/: CMakeLists.txt
examples/import/: E1-basic_usage.cpp
examples/include/: E1-BasicUsage.cpp  e1_basic.cpp
galay-utils/: galay-utils.hpp  galay_utils.hpp
galay-utils/algorithm/: Base64.hpp  HMAC.hpp  base64.hpp  bloom_filter.hpp  consistent_hash.hpp  hmac.hpp  md5.hpp  murmur_hash3.hpp  mvcc.hpp  salt.hpp
galay-utils/app/: app.hpp
galay-utils/args/: App.hpp  app.hpp
galay-utils/backtrace/: BackTrace.hpp  trace.hpp
galay-utils/balancer/: LoadBalancer.hpp  LoadBalancer.inl  balancer.hpp  balancer.inl
galay-utils/cache/: byte_queue_view.hpp  bytes.hpp  lru_cache.hpp  ring_buffer.hpp
galay-utils/circuitbreaker/: CircuitBreaker.hpp  breaker.hpp
galay-utils/common/: Defn.hpp  TypeName.hpp  defn.hpp  type_name.hpp
galay-utils/concurrency/: thread.hpp
galay-utils/config/: config.hpp  env.hpp  ini.hpp  parser.hpp  parser_base.hpp  parser_manager.hpp  toml.hpp
galay-utils/consistent_hash/: ConsistentHash.hpp  hash.hpp
galay-utils/core/: random.hpp  string.hpp
galay-utils/crypto/: murmur_hash3.hpp
galay-utils/data/: trie.hpp
galay-utils/huffman/: Huffman.hpp  huffman.hpp
galay-utils/module/: ModulePrelude.hpp  galay.utils.cppm  galay_utils.cppm  module_prelude.hpp
galay-utils/mvcc/: Mvcc.hpp  mvcc.hpp
galay-utils/parser/: Parser.hpp  config.hpp  detail.hpp  env.hpp  ini.hpp  parser.hpp  parser_base.hpp  parser_manager.hpp  toml.hpp
galay-utils/platform/: process.hpp  signal.hpp  system.hpp
galay-utils/pool/: Pool.hpp  pool.hpp
galay-utils/process/: Process.hpp  backtrace.hpp  process.hpp
galay-utils/random/: Random.hpp  random.hpp
galay-utils/ratelimiter/: RateLimiter.hpp  limiter.hpp
galay-utils/resilience/: circuit_breaker.hpp
galay-utils/routing/: balancer.hpp
galay-utils/signal/: SignalHandler.hpp  signal.hpp
galay-utils/string/: String.hpp  string.hpp
galay-utils/system/: System.hpp  system.hpp
galay-utils/thread/: Thread.hpp  thread.hpp
galay-utils/time/: time.hpp
galay-utils/tool/: byte_queue_view.hpp  circuit_breaker.hpp  rate_limiter.hpp  ring_buffer.hpp  thread.hpp
galay-utils/trie/: TrieTree.hpp  trie.hpp
scripts/tests/: test_cmake_packaging.sh
test/: CMakeLists.txt  import_smoke.cpp  module_import_smoke.cpp  test_all.cpp  test_common.hpp
test/algorithm/: algorithm_test.cpp
test/app/: app_test.cpp
test/buffer/: buffer_test.cpp
test/cache/: cache_test.cpp
test/concurrency/: concurrency_test.cpp
test/core/: core_test.cpp
test/data/: data_test.cpp
test/platform/: platform_test.cpp
test/resilience/: resilience_test.cpp
test/routing/: routing_test.cpp
