cc_library(
    name = "galay-utils",
    hdrs = glob([
        "galay-utils/**/*.hpp",
    ]),
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "galay-utils-test",
    hdrs = glob([
        "galay-utils/**/*.hpp",
    ]),
    includes = ["."],
    copts = [
        "-std=c++20",
        "-O2",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-pthread"],
        "@platforms//os:macos": [],
        "@platforms//os:windows": [],
    }),
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_all",
    srcs = ["test/test_all.cpp"],
    deps = [":galay-utils-test"],
    copts = ["-std=c++20"],
    linkopts = select({
        "@platforms//os:linux": ["-pthread"],
        "@platforms//os:macos": [],
        "@platforms//os:windows": [],
    }),
)

# Install target - header files for manual installation
filegroup(
    name = "headers",
    srcs = glob([
        "galay-utils/**/*.hpp",
        "galay-utils/**/*.inl",
    ]),
    visibility = ["//visibility:public"],
)

# For manual installation, you can copy the headers to your include path:
# bazel build //:headers
# Then manually copy bazel-bin/headers/** to /usr/local/include/galay-utils/
